{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 619,
  "lineage": "48801ee0-fe6d-5f30-99d5-4871e45f5fd6",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_main_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:loadbalancer/app/alb-main/5a36c7bf2f5766c6",
            "arn_suffix": "app/alb-main/5a36c7bf2f5766c6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-main-926988052.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:loadbalancer/app/alb-main/5a36c7bf2f5766c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-main",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-038ad4e77c44d6238"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013f9650d0d47356d"
              },
              {
                "subnet_id": "subnet-0ddf83162af6fa1ea"
              }
            ],
            "subnets": [
              "subnet-013f9650d0d47356d",
              "subnet-0ddf83162af6fa1ea"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-00c7db72b44b28199",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:loadbalancer/app/alb-main/5a36c7bf2f5766c6"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb_sg",
            "module.networking.aws_subnet.alb_subnet",
            "module.networking.aws_subnet.alb_subnet_b",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5",
            "certificate_arn": "arn:aws:acm:eu-west-2:111810594106:certificate/69d60269-82aa-4a03-ac73-3598f5537daf",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-main/c4f3496ee2c29f87",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:loadbalancer/app/alb-main/5a36c7bf2f5766c6",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5"
          },
          "dependencies": [
            "module.alb.aws_lb.alb_main_1",
            "module.alb.aws_lb_target_group.alb_tg_http",
            "module.networking.aws_security_group.alb_sg",
            "module.networking.aws_subnet.alb_subnet",
            "module.networking.aws_subnet.alb_subnet_b",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "url_shortner_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-url-shortner/6db27826363709c5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener-rule/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5/bdd0c3021359af68",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/s/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener-rule/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5/bdd0c3021359af68",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5",
            "priority": 10,
            "region": "eu-west-2",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:listener-rule/app/alb-main/5a36c7bf2f5766c6/ba2801e03ccabdc5/bdd0c3021359af68"
          },
          "dependencies": [
            "module.alb.aws_lb.alb_main_1",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.alb_tg_http",
            "module.alb.aws_lb_target_group.alb_url_shortner_tg",
            "module.networking.aws_security_group.alb_sg",
            "module.networking.aws_subnet.alb_subnet",
            "module.networking.aws_subnet.alb_subnet_b",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-main/c4f3496ee2c29f87",
            "arn_suffix": "targetgroup/alb-tg-main/c4f3496ee2c29f87",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-main/c4f3496ee2c29f87",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:111810594106:loadbalancer/app/alb-main/5a36c7bf2f5766c6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-main",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-main/c4f3496ee2c29f87"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_url_shortner_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-url-shortner/6db27826363709c5",
            "arn_suffix": "targetgroup/alb-tg-url-shortner/6db27826363709c5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-url-shortner/6db27826363709c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:111810594106:loadbalancer/app/alb-main/5a36c7bf2f5766c6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-url-shortner",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111810594106:targetgroup/alb-tg-url-shortner/6db27826363709c5"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f07b55e1a5e4592",
            "arn": "arn:aws:ec2:eu-west-2:111810594106:elastic-ip/eipalloc-02f07b55e1a5e4592",
            "association_id": "eipassoc-03149c8adf7cee74a",
            "domain": "vpc",
            "id": "eipalloc-02f07b55e1a5e4592",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02a17008d0db84ac6",
            "private_dns": "ip-10-0-8-171.eu-west-2.compute.internal",
            "private_ip": "10.0.8.171",
            "public_dns": "ec2-13-135-136-217.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.135.136.217",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:internet-gateway/igw-0f24c4dbd5b1fccc2",
            "id": "igw-0f24c4dbd5b1fccc2",
            "owner_id": "111810594106",
            "region": "eu-west-2",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f07b55e1a5e4592",
            "association_id": "eipassoc-03149c8adf7cee74a",
            "connectivity_type": "public",
            "id": "nat-0a0c583ae578cb48e",
            "network_interface_id": "eni-02a17008d0db84ac6",
            "private_ip": "10.0.8.171",
            "public_ip": "13.135.136.217",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077dd4c8c953018a9",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public_natgateway",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a6fe2784ae71fb9d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a0c583ae578cb48e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a6fe2784ae71fb9d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0a6fe2784ae71fb9d"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.public_natgateway",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:route-table/rtb-0a6fe2784ae71fb9d",
            "id": "rtb-0a6fe2784ae71fb9d",
            "owner_id": "111810594106",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a0c583ae578cb48e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "rtb-0a6fe2784ae71fb9d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:route-table/rtb-0070bb1fe4ff2c427",
            "id": "rtb-0070bb1fe4ff2c427",
            "owner_id": "111810594106",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f24c4dbd5b1fccc2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-alb-route-table"
            },
            "tags_all": {
              "Name": "public-alb-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "rtb-0070bb1fe4ff2c427",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:route-table/rtb-08f9e11010f8d5a12",
            "id": "rtb-08f9e11010f8d5a12",
            "owner_id": "111810594106",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f24c4dbd5b1fccc2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-nat"
            },
            "tags_all": {
              "Name": "public-route-table-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "rtb-08f9e11010f8d5a12",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eb2f93e7c3f9af4",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a6fe2784ae71fb9d",
            "subnet_id": "subnet-061018477789d26a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_ecs",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae77b0d024b280dc",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a6fe2784ae71fb9d",
            "subnet_id": "subnet-0b23e70e397b72b71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_rds",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0077f677ba04bf877",
            "region": "eu-west-2",
            "route_table_id": "rtb-0070bb1fe4ff2c427",
            "subnet_id": "subnet-013f9650d0d47356d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.alb_subnet",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d593abd9391bf92",
            "region": "eu-west-2",
            "route_table_id": "rtb-0070bb1fe4ff2c427",
            "subnet_id": "subnet-0ddf83162af6fa1ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.alb_subnet_b",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01686ef7f19f4bc89",
            "region": "eu-west-2",
            "route_table_id": "rtb-08f9e11010f8d5a12",
            "subnet_id": "subnet-077dd4c8c953018a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rt_nat",
            "module.networking.aws_subnet.public_natgateway",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:security-group/sg-038ad4e77c44d6238",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038ad4e77c44d6238",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "111810594106",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "sg-038ad4e77c44d6238",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:security-group/sg-06795c98cd32a0ff3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06795c98cd32a0ff3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB access to ECS in private subnet (HTTP)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038ad4e77c44d6238"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB access to ECS in private subnet (HTTPS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038ad4e77c44d6238"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS on port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038ad4e77c44d6238"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS on port 3000",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038ad4e77c44d6238"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "111810594106",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_sg"
            },
            "tags_all": {
              "Name": "ecs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "sg-06795c98cd32a0ff3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb_sg",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:security-group/sg-0e934514eea0f2a39",
            "description": "Security group for MySQL or Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e934514eea0f2a39",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL traffic from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06795c98cd32a0ff3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "111810594106",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg"
            },
            "tags_all": {
              "Name": "mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "sg-0e934514eea0f2a39",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb_sg",
            "module.networking.aws_security_group.ecs_sg",
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:subnet/subnet-013f9650d0d47356d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f9650d0d47356d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111810594106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "alb-subnet"
            },
            "tags_all": {
              "Name": "alb-subnet"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "subnet-013f9650d0d47356d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:subnet/subnet-0ddf83162af6fa1ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddf83162af6fa1ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111810594106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "alb-subnet-b"
            },
            "tags_all": {
              "Name": "alb-subnet-b"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "subnet-0ddf83162af6fa1ea",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:subnet/subnet-061018477789d26a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061018477789d26a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111810594106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-ecs"
            },
            "tags_all": {
              "Name": "private-ecs"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "subnet-061018477789d26a3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:subnet/subnet-0b23e70e397b72b71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23e70e397b72b71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111810594106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-rds-a"
            },
            "tags_all": {
              "Name": "private-rds-a"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "subnet-0b23e70e397b72b71",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:subnet/subnet-0733e5c3bd4c1cb40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0733e5c3bd4c1cb40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111810594106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-rds-b"
            },
            "tags_all": {
              "Name": "private-rds-b"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "subnet-0733e5c3bd4c1cb40",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:subnet/subnet-077dd4c8c953018a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077dd4c8c953018a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111810594106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-natgateway"
            },
            "tags_all": {
              "Name": "public-natgateway"
            },
            "vpc_id": "vpc-00c7db72b44b28199"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "subnet-077dd4c8c953018a9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_app"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111810594106:vpc/vpc-00c7db72b44b28199",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0730bf0fec0e9944e",
            "default_route_table_id": "rtb-045e14ef56a795968",
            "default_security_group_id": "sg-0665f9500d0e64a30",
            "dhcp_options_id": "dopt-015c543cc5f0609ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c7db72b44b28199",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045e14ef56a795968",
            "owner_id": "111810594106",
            "region": "eu-west-2",
            "tags": {
              "Name": "umami VPC"
            },
            "tags_all": {
              "Name": "umami VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111810594106",
            "id": "vpc-00c7db72b44b28199",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}